--- a/css/colors/custom_theme.css
+++ b/css/colors/custom_theme.css
@@ -1,3 +1,7 @@
+/*
+// COLORS 
+Darker Blue (main menu, bridesmaids/groomsmen)- #1a237e;
+*/
 h1, h2, h3, h4, h5, h6 {
     color: #1a237e;
 }
@@ -29,7 +33,7 @@ a.button.fill {
     color: #FF8C89;
 }
 #logo {
-    color: #3f51b5;
+    color: #fff;
 }
 #main-menu nav#navigation a:hover, #main-menu nav#navigation a.active {
     color: #FF8C89;
