--- a/css/style.css
+++ b/css/style.css
@@ -648,7 +648,7 @@ a.button i {
     position: relative;
     height: 80px;
     color: #FF8C89;
-    background-color: #fff;
+    background-color: #1a237e;
     text-align: center;
     text-transform: uppercase;
     display: block;
