--- a/css/style.css
+++ b/css/style.css
@@ -748,6 +748,7 @@ a.button i {
     color: #fff;
     letter-spacing: 1px;
     text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    font-size: 30px;
 }
 .hero-inner .mouse {
     display: block;
@@ -1599,6 +1600,9 @@ a.button i {
     max-width: 111px;
     border-radius: 50%;
 }
+.people-image .active {
+    opacity: 1.0;
+}
 .people-image li {
     margin: 0 7px;
     list-style: none;
@@ -1648,6 +1652,9 @@ a.button i {
     background-color: #fff;
     padding: 8px 15px;
     border-radius: 6px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.25);
+    -moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.25);
+    box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.25);
 }
 #gallery-wrapper > div {
     width: 25%;
