--- a/css/style.css
+++ b/css/style.css
@@ -1204,6 +1204,9 @@ a.button i {
     font-size: 22px;
     font-weight: 700;
     color: #c9ac67;
+    font-family: 'Playfair Display', serif;
+    color: #1a237e;
+    font-style: italic;
 }
 #invitation a {
     font-size: 15px;
