--- a/css/colors/custom_theme.css
+++ b/css/colors/custom_theme.css
@@ -155,6 +155,25 @@ footer .logo span {
     margin: 40px 0 25px 0;
 }
 
+.blue {
+    color: #1a237e;
+}
+
+#wedding-venue{
+    background-image: url("http://image10.photobiz.com/5519/24_20151025220100_5858219_large.jpg");
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 600px;
+    padding: 0;
+    background-position: center center;
+    -webkit-background-size: cover !important;
+    -moz-background-size: cover !important;
+    -o-background-size: cover !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+}
+
 section#registry{
     padding-bottom: 350px;
     padding-top: 200px
