--- a/css/style.css
+++ b/css/style.css
@@ -1163,7 +1163,7 @@ a.button i {
     padding: 0;
 }
 #invitation {
-    padding: 40px 0;
+    padding: 10px 0;
     text-align: center;
 }
 #invitation span {
@@ -2158,7 +2158,7 @@ header.fixed {
     line-height: 56px;
     font-size: 14px;
     text-transform: uppercase;
-    background: #FF8C89;
+    background: #1a237e;
     color: #fff;
     text-align: center;
 }
